--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<!doctype html>
+<html lang="en">
+    <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Index of /</title>
+    </head>
+    <body>
+    </body>
+</html>
